--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.allogy.spr</groupId>
-	<artifactId>spr</artifactId>
+	<artifactId>semi-private-reference</artifactId>
 	<version>${release.version}</version>
 
 	<packaging>jar</packaging>
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>com.github.osndok.javax.module</groupId>
 			<artifactId>javax-module</artifactId>
-			<version>1.0.6</version>
+			<version>1.0.7</version>
 		</dependency>
 
 		<!-- For conversion to/from Hexadecimal and Base64url encodings -->
@@ -57,11 +57,13 @@
 		<!--
 		For a fast, and assuredly-correct (but not pure-java/portable) implementation of Salsa20 encryption.
 		Unfortunately, it does not seem to work for 'subsequent use' for unknown reasons (SIGSEGV).
+		Using the "provided" scope means we can still let our engineers fiddle without requiring code changes.
 		-->
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna</artifactId>
 			<version>4.2.1</version>
+			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
 
