--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.allogy.spr</groupId>
+	<groupId>com.github.osndok.spr</groupId>
 	<artifactId>semi-private-reference</artifactId>
 	<version>${release.version}</version>
 
 	<packaging>jar</packaging>
 
 	<name>spr</name>
-	<url>https://redmine.allogy.com/projects/spr</url>
+	<url>https://github.com/Osndok/semi-private-reference</url>
 
 	<description>
 		Semi-private-reference is a specification and reference implementation for a simple wrapper that
@@ -40,12 +40,13 @@
 
 	<dependencies>
 
-		<!-- For annotations concerning command line utility, easy to kern out if undesired -->
+		<!-- For annotations concerning command line utility, easy to kern out if undesired - ->
 		<dependency>
 			<groupId>com.github.osndok.javax.module</groupId>
 			<artifactId>javax-module</artifactId>
 			<version>1.0.7</version>
 		</dependency>
+		-->
 
 		<!-- For conversion to/from Hexadecimal and Base64url encodings -->
 		<dependency>
