--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.osndok.spr</groupId>
-	<artifactId>semi-private-reference</artifactId>
-	<version>${release.version}</version>
+	<artifactId>spr-parent</artifactId>
+	<version>snapshot</version>
 
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
+	<modules>
+		<module>spr-common</module>
+	</modules>
 
 	<name>spr</name>
 	<url>https://github.com/Osndok/semi-private-reference</url>
@@ -38,80 +41,8 @@
 		large blocks or creating indexes).
 	</description>
 
-	<dependencies>
-
-		<!-- For annotations concerning command line utility, easy to kern out if undesired - ->
-		<dependency>
-			<groupId>com.github.osndok.javax.module</groupId>
-			<artifactId>javax-module</artifactId>
-			<version>1.0.7</version>
-		</dependency>
-		-->
-
-		<!-- For conversion to/from Hexadecimal and Base64url encodings -->
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.10</version>
-		</dependency>
-
-		<!--
-		For a fast, and assuredly-correct (but not pure-java/portable) implementation of Salsa20 encryption.
-		Unfortunately, it does not seem to work for 'subsequent use' for unknown reasons (SIGSEGV).
-		Using the "provided" scope means we can still let our engineers fiddle without requiring code changes.
-		-->
-		<dependency>
-			<groupId>net.java.dev.jna</groupId>
-			<artifactId>jna</artifactId>
-			<version>4.2.1</version>
-			<scope>provided</scope>
-			<optional>true</optional>
-		</dependency>
-
-		<!--
-		A pure java implementation is much slower, but avoids the native interface boundary, and is thus
-		unlikely to cause a segmentation-fault. It's output seems to agree with libsodium, and (therefor)
-		the Salsa20 reference implementation (which libsodium includes wholesale in it's source).
-		-->
-		<dependency>
-			<groupId>com.github.emstlk</groupId>
-			<artifactId>nacl4s_2.11</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-
-		<!-- To enable basic unit testing -->
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.9.9</version>
-			<scope>test</scope>
-		</dependency>
-
-	</dependencies>
-
-	<build>
-		<plugins>
-
-			<plugin>
-				<groupId>com.sap.prd.mobile.ios.maven.plugins</groupId>
-				<artifactId>resolve-pom-maven-plugin</artifactId>
-				<version>1.0</version>
-				<executions>
-					<execution>
-						<id>resolve-pom-props</id>
-						<goals>
-							<goal>resolve-pom-props</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
-	</build>
-
 	<properties>
-		<release.version>snapshot</release.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
 	</properties>
-
 </project>
