--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@
 	<groupId>com.github.osndok.spr</groupId>
 	<artifactId>spr-parent</artifactId>
 	<version>snapshot</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>14</source>
+					<target>14</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<packaging>pom</packaging>
 	<modules>
@@ -44,5 +56,7 @@
 	<properties>
 		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 </project>
